# work-management

./: Taskfile.yml  compose.yml
backend/: .env  Cargo.toml  Taskfile.yml
backend/entity/: Cargo.toml
backend/entity/src/: break_sessions.rs  lib.rs  prelude.rs  projects.rs  work_sessions.rs
backend/migration/: Cargo.toml  Taskfile.yml
backend/migration/src/: lib.rs  m20220101_000001_add_projects.rs  m20241102_105555_add_work_session.rs  m20241102_112005_add_break_sessions.rs
backend/src/: main.rs
backend/src/api/: handlers.rs  router.rs
